# semantic-gaussians

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  demo.py  justfile  pyproject.toml  validate_out.json  validate_replica.py  validate_replica_clip.py  validation_results.json  validation_results_clip.json  visualize_embeddings.ipynb  visualize_replica.ipynb
configs/: 3dgs.yaml  astra_lab.yaml  astra_online.yaml  lerf.yaml  lerf_vlm.yaml  living_room.yaml  replica.yaml  scannet.yaml  scannetpp.yaml
configs/scannetpp_eval/: eval_instance.yml  eval_semantic.yml
core/: config.py  gaussian_model.py  gaussian_optimizer.py  gaussian_renderer.py  params.py  train.py  visualizer.py
core/cluster/: clean.py  hdbscan.py  plot_clusters.py
core/data/: blender_reader.py  colmap_reader.py  dataset_readers.py  nerfstudio_reader.py  polycam_reader.py  reader.py  replica_reader.py  scannet_reader.py
core/data/preprocessing/: extract_replica_pcd.py  process_scannet.py  scannetpp.py  sfm.py
core/eval/: eval_lerf_mask.py  eval_lerf_ovs.py  eval_segmentation.py  eval_semantic_labeling.py  instance_eval.py  metrics.py  utils.py
core/eval/scannetpp/: export_predictions.py
core/language/: __init__.py  embed.py  lang_model.py  masqclip.py  utils.py
core/llm_agent/: server.py
core/losses/: __init__.py  geometric.py  instances.py  photometric.py
core/masks/: extract_sam_masks.py  sam_levels_model.py  utils.py
core/scene/: camera.py  scene.py
core/semantic/: descriptions.py  export_json.py  generate_bboxes.py
core/utils/: general_utils.py  loss_utils.py  mask_utils.py  metric_utils.py  notebook_utils.py  render_utils.py  scene_utils.py  setup_utils.py  sh_utils.py  train_utils.py
core/viewer/: index.html  main.js  server.py  splat_renderer.js  styles.css  viewer.js
opensplat3d/: config.py  gaussian_model.py  gaussian_optimizer.py  gaussian_renderer.py  params.py  pose_optimizer.py  train.py
opensplat3d/cluster/: clean.py  hdbscan.py  plot_clusters.py
opensplat3d/data/: __init__.py  astra_reader.py  blender_reader.py  colmap_loader.py  colmap_reader.py  dataset_readers.py  nerfstudio_reader.py  polycam_reader.py  reader.py  replica_reader.py  ros2_reader.py  scannet_reader.py
opensplat3d/data/preprocessing/: colmap_to_transforms.py  extract_replica_pcd.py  extract_ros2_pcd.py  generate_astra_ply.py  generate_dav2_depth.py  generate_pairs_from_odom.py  generate_pcd_nerfstudio.py  init_instances_from_sam.py  odom_to_transforms.py  process_astra_colmap.py  process_astra_nerfstudio.py  process_scannet.py  sfm.py  visualize_point_cloud.py
opensplat3d/eval/: eval_lerf_mask.py  eval_lerf_ovs.py  eval_segmentation.py  eval_semantic_labeling.py  grounding_sam.py  instance_eval.py  metrics.py  utils.py
opensplat3d/eval/scannetpp/: eval_instance.py  eval_semantic.py  export_predictions.py  label_utils.py
opensplat3d/jupyter/: astra_study.ipynb  astra_training_study.ipynb  cluster.ipynb  debug_ros2.ipynb  descriptions.ipynb  pose_study.ipynb  training_astra.ipynb  training_study.ipynb
opensplat3d/jupyter/output/training_study_replica/20260412104429-4437854e/: command.txt  config.yaml  overrides.yaml
opensplat3d/jupyter/output/training_study_replica/20260412104501-099059b7/: command.txt  config.yaml
opensplat3d/jupyter/output/training_study_replica/20260412104502-8d05a680/: config.yaml
opensplat3d/jupyter/output/training_study_replica/20260412113929-dadc7429/: command.txt  config.yaml
opensplat3d/jupyter/output/training_study_replica/20260412115218-e1637c30/: config.yaml  overrides.yaml
opensplat3d/jupyter/output/training_study_replica/20260412115938-313a4d52/: command.txt  config.yaml
opensplat3d/jupyter/output/training_study_replica/20260412120257-419f2206/: command.txt  config.yaml
opensplat3d/jupyter/output/training_study_replica/20260412121106-c5e888da/: command.txt  config.yaml
opensplat3d/language/: embed.py  lang_model.py  masqclip.py  utils.py
opensplat3d/losses/: __init__.py  geometric.py  instances.py  photometric.py
opensplat3d/masks/: extract_sam_masks.py  sam_levels_model.py
opensplat3d/scene/: __init__.py  camera.py  scene.py
opensplat3d/semantic/: descriptions.py  export_json.py  generate_bboxes.py
opensplat3d/utils/: camera_utils.py  general_utils.py  loss_utils.py  notebook_utils.py  render_utils.py  rle_utils.py  scene_utils.py  setup_utils.py  train_utils.py  vis_utils.py
scratch/: extract_images.py  inspect_bag.py  inspect_bag_ranges.py  inspect_bag_tree.py  inspect_translations.py
scripts/: compare_colmap.py  plot_metrics.py  prepare_replica.sh  render_stages.py  replica_colmap.sh  scannet_colmap.sh
submodules/diff-gaussian-rasterization/: .gitignore  ext.cpp  pyproject.toml  rasterize_points.cu  rasterize_points.h
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/scannetpp/: README.md  pyproject.toml
submodules/scannetpp/scannetpp/common/: file_io.py  scene_release.py
submodules/scannetpp/scannetpp/semantic/eval/: eval_instance.py  eval_semantic.py
submodules/scannetpp/scannetpp/semantic/utils/: confmat.py  instance_utils.py
