[project]
name = "diff-gaussian-rasterization"
version = "0.0.0"
description = "CUDA-based Gaussian rasterizer from Inria's GRAPHDECO group"
authors = [{ name = "Inria GRAPHDECO", email = "george.drettakis@inria.fr" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = ["torch"]

[tool.setuptools]
packages = ["diff_gaussian_rasterization"]

[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"
